--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             </li>
             <li id="phone" class="hidden-xs">
               <a href="tel:510-542-7312">
-                <span>5105427312</span></a><div>* We Deliver</div>
+                <span>5105427312</span>
+              </a>
+              <div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
