--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -12,9 +12,10 @@
         </a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="https://www.google.com/maps/place/Sofani+ Mesfun's+Eritrean+restaurant/@39.3635874,-76.7138622,17z/data=!4m6!1m3!3m2!1s0x89c81a14e7817803:0xab20a0e99daa17ea!2sDavid+Chu's+China+Bistro!3m1!1s0x89c81a14e7817803:0xab20a0e99daa17ea" target="_blank">
+        <a href="https://www.google.com/maps/place/MLK+Cafe/@37.8287133,-122.2689846,20z/data=!4m12!1m6!3m5!1s0x80857e0887d33f0f:0x78d12b4ac5a94fe6!2sMLK+Cafe!8m2!3d37.828492!4d-122.2685733!3m4!1s0x80857e0887d33f0f:0x78d12b4ac5a94fe6!8m2!3d37.828492!4d-122.2685733?hl=en" target="_blank">
           <div id="map-tile">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d393.918632857002!2d-122.2689846!3d37.8287133!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857e0887d33f0f%3A0x78d12b4ac5a94fe6!2sMLK+Cafe!5e0!3m2!1sen!2sus!4v1484598122320" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+           
             <span>map</span>
           </div>
         </a>
